Change to using Caddy

--- a/docker-swarm-traefik.yml
+++ b/docker-swarm-traefik.yml
@@ -1,33 +1,21 @@
 version: "3.8"
 # https://docs.docker.com/compose/compose-file/compose-file-v3/
 services:
-  nginx:
-    image: nginx:alpine
-    # https://hub.docker.com/_/nginx
+  caddy:
+    image: caddy:latest
+    # https://hub.docker.com/_/caddy
     volumes:
       - phorge_web:/var/www/html
+      - caddy_data:/data
     networks:
       - phorge
       - traefik
     configs:
-      - source: phorge_nginx.conf
-        target: /etc/nginx/templates/nginx.conf.template
+      - source: phorge_caddyfile
+        target: /etc/caddy/Caddyfile
     environment:
-      - NGINX_ENVSUBST_OUTPUT_DIR=/etc/nginx
-      # https://nginx.org/en/docs/ngx_core_module.html#worker_processes
-      - NGINX_WORKER_PROCESSES=auto
-      # https://nginx.org/en/docs/ngx_core_module.html#worker_rlimit_nofile
-      - NGINX_WORKER_RLIMIT_NOFILE=65535
-      # https://nginx.org/en/docs/ngx_core_module.html#worker_connections
-      - NGINX_WORKER_CONNECTIONS=65535
-      # https://nginx.org/en/docs/http/ngx_http_core_module.html#keepalive_timeout
-      - NGINX_KEEPALIVE_TIMEOUT=60s
-      # https://nginx.org/en/docs/http/ngx_http_core_module.html#client_max_body_size
-      - NGINX_CLIENT_MAX_BODY_SIZE=32m
-      # https://nginx.org/en/docs/http/ngx_http_core_module.html#client_body_timeout
-      - NGINX_CLIENT_BODY_TIMEOUT=90s
-      # https://nginx.org/en/docs/http/server_names.html
-      - NGINX_HOST=phorge.yourdomain.test
+      # https://caddyserver.com/docs/automatic-https#overview
+      - DOMAIN=:80
     deploy:
       labels:
         # Essential traefik labels https://doc.traefik.io/traefik/providers/docker/
@@ -50,7 +38,7 @@ services:
       - phorge_db
 
   phorge:
-    image: zeigren/phorge:latest
+    image: zeigren/phorge:latest # ghcr.io/zeigren/phorge_docker:latest
     # https://hub.docker.com/r/zeigren/phorge
     volumes:
       - phorge_web:/var/www/html
@@ -79,6 +67,7 @@ volumes:
   phorge_db:
   phorge_ssh:
   phorge_repo:
+  caddy_data:
 
 networks:
   phorge:
@@ -91,7 +80,7 @@ secrets:
     external: true
 
 configs:
-  phorge_nginx.conf:
+  phorge_caddyfile:
     external: true
   # phorge_mailers.json:
   #   external: true
