--- a/docker-swarm.yml
+++ b/docker-swarm.yml
@@ -1,46 +1,23 @@
 version: "3.8"
 # https://docs.docker.com/compose/compose-file/compose-file-v3/
 services:
-  nginx:
-    image: nginx:alpine
-    # https://hub.docker.com/_/nginx
+  caddy:
+    image: caddy:latest
+    # https://hub.docker.com/_/caddy
     volumes:
       - phorge_web:/var/www/html
+      - caddy_data:/data
     networks:
       - phorge
     ports:
-      # CHANGE TO "80:80" IF USING NGINX FOR SSL TERMINATION
-      - 9080:80
-      # UNCOMMENT IF USING NGINX FOR SSL TERMINATION
-      # - 443:443
+      - "80:80"
+      - "443:443"
     configs:
-      - source: phorge_nginx.conf
-        target: /etc/nginx/templates/nginx.conf.template
+      - source: phorge_caddyfile
+        target: /etc/caddy/Caddyfile
     environment:
-      - NGINX_ENVSUBST_OUTPUT_DIR=/etc/nginx
-      # https://nginx.org/en/docs/ngx_core_module.html#worker_processes
-      - NGINX_WORKER_PROCESSES=auto
-      # https://nginx.org/en/docs/ngx_core_module.html#worker_rlimit_nofile
-      - NGINX_WORKER_RLIMIT_NOFILE=65535
-      # https://nginx.org/en/docs/ngx_core_module.html#worker_connections
-      - NGINX_WORKER_CONNECTIONS=65535
-      # https://nginx.org/en/docs/http/ngx_http_core_module.html#keepalive_timeout
-      - NGINX_KEEPALIVE_TIMEOUT=60s
-      # https://nginx.org/en/docs/http/ngx_http_core_module.html#client_max_body_size
-      - NGINX_CLIENT_MAX_BODY_SIZE=32m
-      # https://nginx.org/en/docs/http/ngx_http_core_module.html#client_body_timeout
-      - NGINX_CLIENT_BODY_TIMEOUT=90s
-      # https://nginx.org/en/docs/http/server_names.html
-      - NGINX_HOST=phorge.yourdomain.test
-      # UNCOMMENT IF USING NGINX FOR SSL TERMINATION
-      # - NGINX_SSL_CERT=yourdomain.test.crt
-      # - NGINX_SSL_KEY=yourdomain.test.key
-    # UNCOMMENT IF USING NGINX FOR SSL TERMINATION
-    # secrets:
-    #   - source: yourdomain.test.crt
-    #     target: /etc/nginx/certs/yourdomain.test.crt
-    #   - source: yourdomain.test.key
-    #     target: /etc/nginx/certs/yourdomain.test.key
+      # https://caddyserver.com/docs/automatic-https#overview
+      - DOMAIN=phorge.yourdomain.test
 
   mariadb:
     image: mariadb:latest
@@ -56,7 +33,7 @@ services:
       - phorge_db
 
   phorge:
-    image: zeigren/phorge:latest
+    image: zeigren/phorge:latest # ghcr.io/zeigren/phorge_docker:latest
     # https://hub.docker.com/r/zeigren/phorge
     volumes:
       - phorge_web:/var/www/html
@@ -85,6 +62,7 @@ volumes:
   phorge_db:
   phorge_ssh:
   phorge_repo:
+  caddy_data:
 
 networks:
   phorge:
@@ -93,14 +71,9 @@ networks:
 secrets:
   phorge_db_password:
     external: true
-  # UNCOMMENT IF USING NGINX FOR SSL TERMINATION
-  # yourdomain.test.crt:
-  #   external: true
-  # yourdomain.test.key:
-  #   external: true
 
 configs:
-  phorge_nginx.conf:
+  phorge_caddyfile:
     external: true
   # phorge_mailers.json:
   #   external: true
