--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,24 @@
 version: "3.7"
 # https://docs.docker.com/compose/compose-file/compose-file-v3/
 services:
-  nginx:
-    image: nginx:alpine
-    # https://hub.docker.com/_/nginx
+  caddy:
+    image: caddy:latest
+    # https://hub.docker.com/_/caddy
     volumes:
       - phorge_web:/var/www/html
-      - ./config/phorge_nginx.conf:/etc/nginx/templates/nginx.conf.template
-      # UNCOMMENT IF USING NGINX FOR SSL TERMINATION
-      # - ./config/yourdomain.test.crt:/etc/nginx/certs/yourdomain.test.crt
-      # - ./config/yourdomain.test.key:/etc/nginx/certs/yourdomain.test.key
+      - caddy_data:/data
+      - ./phorge_caddyfile:/etc/caddy/Caddyfile
     networks:
       - phorge
     ports:
-      # CHANGE TO "80:80" IF USING NGINX FOR SSL TERMINATION
-      - 9080:80
-      # UNCOMMENT IF USING NGINX FOR SSL TERMINATION
-      # - 443:443
+      # CHANGE TO "80:80" IF USING CADDY FOR HTTPS
+      - "9080:80"
+      # UNCOMMENT IF USING CADDY FOR HTTPS
+      # - "443:443"
     environment:
-      - NGINX_ENVSUBST_OUTPUT_DIR=/etc/nginx
-      # https://nginx.org/en/docs/ngx_core_module.html#worker_processes
-      - NGINX_WORKER_PROCESSES=auto
-      # https://nginx.org/en/docs/ngx_core_module.html#worker_rlimit_nofile
-      - NGINX_WORKER_RLIMIT_NOFILE=65535
-      # https://nginx.org/en/docs/ngx_core_module.html#worker_connections
-      - NGINX_WORKER_CONNECTIONS=65535
-      # https://nginx.org/en/docs/http/ngx_http_core_module.html#keepalive_timeout
-      - NGINX_KEEPALIVE_TIMEOUT=60s
-      # https://nginx.org/en/docs/http/ngx_http_core_module.html#client_max_body_size
-      - NGINX_CLIENT_MAX_BODY_SIZE=32m
-      # https://nginx.org/en/docs/http/ngx_http_core_module.html#client_body_timeout
-      - NGINX_CLIENT_BODY_TIMEOUT=90s
-      # https://nginx.org/en/docs/http/server_names.html
-      - NGINX_HOST=phorge.yourdomain.test
-      # UNCOMMENT IF USING NGINX FOR SSL TERMINATION
-      # - NGINX_SSL_CERT=yourdomain.test.crt
-      # - NGINX_SSL_KEY=yourdomain.test.key
+      # https://caddyserver.com/docs/automatic-https#overview
+      - DOMAIN=:80
+      - HTTPS=off
 
   mariadb:
     image: mariadb:latest
@@ -49,7 +32,7 @@ services:
       - phorge_db
 
   phorge:
-    image: zeigren/phorge:latest
+    image: zeigren/phorge:latest # ghcr.io/zeigren/phorge_docker:latest
     # https://hub.docker.com/r/zeigren/phorge
     volumes:
       - phorge_web:/var/www/html
@@ -74,6 +57,7 @@ volumes:
   phorge_web:
   phorge_ssh:
   phorge_repo:
+  caddy_data:
 
 networks:
   phorge:
